# ppcurses

./: .clang-format  .travis.yml  CMakeLists.txt  Changelog.md  README.md  design_draft.md
include/: application.h  application.hpp  ncurses_forward_decl.h  ncurses_forward_decl.hpp
include/screen/: screen.h  screen.hpp
include/util/: point.h  point.hpp
include/widgets/: label.h  label.hpp  widget.h  widget.hpp
include/window/: statusbar.hpp  window.h  window.hpp
src/: CMakeLists.txt  application.cc  application.cpp  main.cpp
src/screen/: screen.cc  screen.cpp
src/util/: point.cpp
src/widgets/: label.cc  label.cpp  widget.cpp
src/window/: statusbar.cpp  window.cc  window.cpp
tests/: CMakeLists.txt  main.cc  main.cpp
